[project]
name = "jsonurl-py"
authors = [{ name = "Leonard Crestez", email = "cdleonard@gmail.com" }]
readme = "README.rst"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"

[project.urls]
Home = "https://github.com/cdleonard/jsonurl-py"

[project.scripts]
jsonurl-py = "jsonurl_py:main"

[project.optional-dependencies]
test = ["pytest", "pytest-benchmark"]
hack = ["tox", "black", "pre-commit", "flit", "mypy"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "jsonurl_py"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
files = "."
