[project]
name = "jsonurl-py"
authors = [{ name = "Leonard Crestez", email = "cdleonard@gmail.com" }]
readme = "README.rst"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/cdleonard/jsonurl-py"
documentation = "https://cdleonard.github.io/jsonurl-py/docs/"

[project.scripts]
jsonurl-py = "jsonurl_py:main"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-benchmark"]
hack = ["tox", "black", "pre-commit", "flit", "mypy"]
docs = ["sphinx", "sphinx-argparse", "sphinx-rtd-theme"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "jsonurl_py"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
files = "."

[tool.isort]
profile = "black"
